Add all get history function
